fixed z-index and position of the options box

--- a/src/sass/plugin.scss
+++ b/src/sass/plugin.scss
@@ -16,6 +16,8 @@
 		&[data-show] {
 			display: block;
 		}
+
+		background-color: var(--tp-plugin-select-box-bg-color, rgb(58, 59, 64));
 	}
 
 	&_options {
@@ -24,7 +26,10 @@
 		list-style-type: none;
 		max-height: 240px;
 		overflow: auto;
-		background-color: var(--tp-plugin-select-box-bg-color, rgba(58, 59, 64, 1));
+		background-color: var(--tp-plugin-select-box-bg-color, rgb(58, 59, 64));
+
+
+		z-index: 2;
 
 		.no-data {
 			cursor: initial;
@@ -48,4 +53,8 @@
 
 		color: var(--button-foreground-color);
 	}
+}
+
+.tp-txtv {
+	position: unset;
 }
